2003-01-21  Seth Woolley <seth@tautology.org>

		Still fails to compile, added patches for reference.
		Waiting for author to release latest and greatest.

2002-10-23  Seth Woolley <seth@tautology.org>

		Still fails to compile, removed usegcc2, cleaned history

2002-06-12  Unet <burududu@hotpop.com>
	
		Created this.