@@ -6,8 +6,8 @@ SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
         WEB_SITE=http://gsculpt.sourceforge.net/downloads.html
          ENTERED=20020429
          UPDATED=20020429
-	MD5[0]=3854737eb6fd7514c3fa8395c347d90a
-	LICENSE[0]=GPL
+          MD5[0]=3854737eb6fd7514c3fa8395c347d90a
+      LICENSE[0]=GPL
       MAINTAINER=sandalle@yahoo.com
            SHORT="3D modelling program"
 cat << EOF
