@@ -1,3 +1,8 @@
+2003-02-09  Arwed v. Merkatz <v.merkatz@gmx.net>
+
+		removed old patches
+		added new patch, now it compiles with gcc3
+
 2003-01-21  Seth Woolley <seth@tautology.org>
 
 		Still fails to compile, added patches for reference.
